# DjangoCountries

./: README.md  pyproject.toml  requirements.txt
Countries/: models.py  views.py
Countries/fixtures/: save_all.json
Countries/migrations/: 0001_initial.py
DjangoCountries/: settings.py  urls.py
templates/: base.html  countries_list.html  country.html  index.html  language.html  languages.html  letter.html
